# forge

./: docker-compose.yml
forge-client/: index.html  package.json  vite.config.ts
forge-client/src/: routeTree.gen.ts  style.css
forge-client/src-tauri/: Cargo.toml  tauri.conf.json
server/: Cargo.toml  README
server/migrations/2026-01-01-183808-0000_users/: down.sql  up.sql
server/migrations/2026-01-01-185039-0000_user_credentials/: down.sql  up.sql
server/migrations/2026-01-01-185632-0000_refresh_tokens/: down.sql  up.sql
server/migrations/2026-01-01-185632-0000_sessions/: down.sql  up.sql
server/migrations/2026-01-01-190204-0000_email_verification/: down.sql  up.sql
server/migrations/2026-01-01-190204-0000_verification_tokens/: down.sql  up.sql
server/migrations/2026-01-01-191555-0000_password_history/: down.sql  up.sql
server/migrations/2026-01-01-191800-0000_user_profiles/: down.sql  up.sql
server/migrations/2026-01-01-192320-0000_permissions/: down.sql  up.sql
server/migrations/2026-01-01-200617-0000_updated_at_triggers/: down.sql  up.sql
server/migrations/2026-01-02-163937-0000_add_family_id_to_refresh_tokens/: down.sql  up.sql
server/migrations/2026-01-02-165138-0000_drop_verification_tokens/: down.sql  up.sql
server/migrations/2026-01-02-165138-0001_remove_email_verified_from_users/: down.sql  up.sql
server/src/: config.rs  consts.rs  error.rs  main.rs  schema.rs  utils.rs
server/src/db/: index.rs  mod.rs  schema.rs
server/src/db/models/: auth.rs
server/src/handlers/: health.rs
server/src/handlers/auth/: sign_up.rs
(+11 files in other folders)
