[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.8", features = ["json"] }
chrono = "0.4.42"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["tracing"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["ansi", "chrono", "env-filter", "fmt", "json", "registry"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid"] } 
uuid = { version = "1.19.0", features = ["v7"] }
thiserror = "2.0.17"
diesel-async = { version = "0.7.4", features = ["deadpool", "postgres"] }
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.12.2"
